--- a/src/main/resources/templates/updateEmployee.html
+++ b/src/main/resources/templates/updateEmployee.html
@@ -28,6 +28,12 @@
 				<option value="6">6</option>
 				<option value="6+">6+</option>
 			</select>
+
+			<select  th:field="*{car}" class="form-control mb-4 col-4">
+				<option th:each="car: ${listCars}" th:value="${{car}}"><span th:text="${car.brand + ' ' + car.model}"></span></option>
+
+			</select>
+
 				
 				<button type="submit" class="btn btn-info col-2"> Update Employee</button>
 		</form>
